@@ -1168,10 +1168,15 @@ function(file)
 }
 
 .expand_BioC_repository_URLs <-
-function(x)
+function(x) {
+    x <- sub("%bm",
+             as.character(getOption("BioC_mirror",
+                                    "http://www.bioconductor.org")),
+             x, fixed = TRUE)
     sub("%v",
         as.character(.BioC_version_associated_with_R_version),
         x, fixed = TRUE)
+}
 
 ### ** .shell_with_capture
 
